[package]
name = "kernel_playground"
version = "0.1.0"
authors = ["Alexandru Vulpea <alexandru.vulpea@gmail.com>"]
edition = "2018"

# To abort on panic instead of unwinding
# Unwiding requires OS specific libraries so
# this doesn't make sense in kernel.
# Same effect can be achieved per target
# using `panic-strategy` field in target .json file.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.6.4"
volatile = "0.2.3"
spin = "0.5.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
